--- a/package.json
+++ b/package.json
@@ -1,21 +1,31 @@
 {
   "name": "crash-analytics-api",
   "version": "1.0.0",
-  "description": "Universal crash reporting API for all applications with maximum security",
+  "description": "A crash analytics API built with Cloudflare Workers and Supabase",
   "main": "worker/index.js",
-  "packageManager": "pnpm@8.0.0",
   "scripts": {
-    "deploy": "wrangler deploy",
     "dev": "wrangler dev",
-    "test": "node test-api.js",
-    "test:security": "node test-api.js",
-    "install:python-deps": "pip install -r clients/python/requirements.txt"
+    "deploy": "wrangler deploy",
+    "test": "node scripts/test-api.js",
+    "test:security": "node scripts/test-api.js",
+    "clear-db": "node scripts/clear-db.js",
+    "test-client": "node clients/javascript/test-client.js",
+    "test-client:python": "python3 clients/python/crash_reporter.py",
+    "install:python-deps": "uv pip install -r clients/python/requirements.txt"
   },
-  "keywords": ["crash-reporting", "analytics", "cloudflare-worker", "supabase"],
+  "keywords": [
+    "crash-reporting",
+    "analytics",
+    "cloudflare-worker",
+    "supabase"
+  ],
   "author": "",
   "license": "MIT",
   "devDependencies": {
-    "wrangler": "^3.0.0",
-    "jest": "^29.0.0"
+    "jest": "^29.0.0",
+    "wrangler": "^3.0.0"
+  },
+  "dependencies": {
+    "dotenv": "^17.2.1"
   }
 }
