--- a/clients/python/requirements.txt
+++ b/clients/python/requirements.txt
@@ -1,4 +1,11 @@
-requests>=2.25.0
-psutil>=5.8.0
+# Python 3.12+ required for modern datetime features
+# Core dependencies
+requests>=2.31.0
 python-dotenv>=1.0.0
+psutil>=5.9.0
+
+# Development dependencies (optional)
+# pytest>=7.4.0
+# black>=23.0.0
+# flake8>=6.0.0
 
