cleanup: Remove obsolete and unused files to streamline project
- Remove obsolete scripts: create-tables.js, debug-supabase.js, init-database.js
- Remove redundant scripts: recreate-db.js, drop-table.js, read-db.js, test-iphash.js
- Remove duplicate SQL: check-and-clean.sql (replaced by clean-setup.sql)
- Remove old test-client.js (replaced by test-simple.js)
- Update package.json scripts to reference correct files
- All functionality preserved - project is cleaner and more maintainable
- Tests confirm everything still works correctly

--- a/clients/javascript/package.json
+++ b/clients/javascript/package.json
@@ -4,7 +4,7 @@
   "description": "JavaScript client for the Universal Crash Analytics API",
   "main": "crash_reporter.js",
   "scripts": {
-    "test": "node test-client.js"
+    "test": "node test-simple.js"
   },
   "keywords": ["crash-reporting", "error-tracking", "analytics"],
   "author": "",
